--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -8,12 +8,12 @@ on:
     
 env:
   AWS_REGION: ap-southeast-2                   # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: MY_ECR_REPOSITORY           # set this to your Amazon ECR repository name
-  ECS_SERVICE: MY_ECS_SERVICE                 # set this to your Amazon ECS service name
-  ECS_CLUSTER: MY_ECS_CLUSTER                 # set this to your Amazon ECS cluster name
-  ECS_TASK_DEFINITION: MY_ECS_TASK_DEFINITION # set this to the path to your Amazon ECS task definition
+  ECR_REPOSITORY: dylan           # set this to your Amazon ECR repository name
+  ECS_SERVICE: dylan-service                 # set this to your Amazon ECS service name
+  ECS_CLUSTER: dylan-cluster                 # set this to your Amazon ECS cluster name
+  ECS_TASK_DEFINITION: dylan-task-definition # set this to the path to your Amazon ECS task definition
                                                # file, e.g. .aws/task-definition.json
-  CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
+  CONTAINER_NAME: dylan-website           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag dylans-website:$(date +%s)
+      run: docker build . --file Dockerfile --tag dylan-website:$(date +%s)
       
   deploy:
     name: Deploy to Amazon ECS
