--- a/.github/workflows/cicd-pipeline.yml
+++ b/.github/workflows/cicd-pipeline.yml
@@ -47,7 +47,7 @@ jobs:
       with:
         token_format: 'access_token'
         workload_identity_provider: 'projects/518921962661/locations/global/workloadIdentityPools/dylan-pool/providers/github-actions'
-        service_account: '518921962661-compute@developer.gserviceaccount.com'
+        service_account: 'dylan-service-account@eng-copilot-269005.iam.gserviceaccount.com'
 
     - name: Docker configuration
       run: |-
