--- a/redis-service.yml
+++ b/redis-service.yml
@@ -15,11 +15,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redis-service
+  labels:
+    app: redis
+  name: my-redis-svc
+  namespace: default
 spec:
-  type: LoadBalancer
   ports:
-    - port: 6379
-      targetPort: 6379
+  - name: redis
+    port: 6379
+    targetPort: 6379
+    protocol: TCP
   selector:
-    app: redis-master
+    app: redis
+  type: ClusterIP
